--- a/get-results.ipynb
+++ b/get-results.ipynb
@@ -424,7 +424,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"13\" valign=\"top\">2008.0</th>\n",
+       "      <th rowspan=\"14\" valign=\"top\">2008.0</th>\n",
        "      <th rowspan=\"8\" valign=\"top\">first</th>\n",
        "      <th>arsenal-milan</th>\n",
        "      <td>arsenal</td>\n",
@@ -523,7 +523,15 @@
        "      <td>schalke (0-2) barcelona</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>semi</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">semi</th>\n",
+       "      <th>barcelona-united</th>\n",
+       "      <td>united</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>barcelona (0-1) united</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>liverpool-chelsea</th>\n",
        "      <td>chelsea</td>\n",
        "      <td>False</td>\n",
@@ -648,8 +656,8 @@
        "      <td>united (4-1) arsenal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">2010.0</th>\n",
-       "      <th rowspan=\"3\" valign=\"top\">first</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2010.0</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">first</th>\n",
        "      <th>bayern-fiorentina</th>\n",
        "      <td>bayern</td>\n",
        "      <td>False</td>\n",
@@ -664,14 +672,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>cska (3-2) sevilla</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inter-chelsea</th>\n",
-       "      <td>inter</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>inter (3-1) chelsea</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -935,7 +935,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>139 rows × 5 columns</p>\n",
+       "<p>140 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -953,7 +953,8 @@
        "             fenerbahce-chelsea          chelsea  False  False  False   \n",
        "             roma-united                  united  False  False  False   \n",
        "             schalke-barcelona         barcelona  False  False  False   \n",
-       "       semi  liverpool-chelsea           chelsea  False  False   True   \n",
+       "       semi  barcelona-united             united  False  False  False   \n",
+       "             liverpool-chelsea           chelsea  False  False   True   \n",
        "2009.0 first arsenal-roma                arsenal   True  False   True   \n",
        "             atletico-porto                porto  False   True  False   \n",
        "             chelsea-juventus            chelsea  False  False  False   \n",
@@ -970,7 +971,6 @@
        "             united-arsenal               united  False  False  False   \n",
        "2010.0 first bayern-fiorentina            bayern  False   True  False   \n",
        "             cska-sevilla                   cska  False  False  False   \n",
-       "             inter-chelsea                 inter  False  False  False   \n",
        "...                                          ...    ...    ...    ...   \n",
        "2015.0 semi  barcelona-bayern          barcelona  False  False  False   \n",
        "             juventus-madrid            juventus  False  False  False   \n",
@@ -1017,7 +1017,8 @@
        "             fenerbahce-chelsea                                fenerbahce (2-3) chelsea  \n",
        "             roma-united                                              roma (0-3) united  \n",
        "             schalke-barcelona                                  schalke (0-2) barcelona  \n",
-       "       semi  liverpool-chelsea                              liverpool (3-4 aet) chelsea  \n",
+       "       semi  barcelona-united                                    barcelona (0-1) united  \n",
+       "             liverpool-chelsea                              liverpool (3-4 aet) chelsea  \n",
        "2009.0 first arsenal-roma              arsenal (1-1 aet) roma, arsenal won on penalties  \n",
        "             atletico-porto           atletico (2-2) porto, porto won on away goals ...  \n",
        "             chelsea-juventus                                    chelsea (3-2) juventus  \n",
@@ -1034,7 +1035,6 @@
        "             united-arsenal                                        united (4-1) arsenal  \n",
        "2010.0 first bayern-fiorentina        bayern (4-4) fiorentina, bayern won on away go...  \n",
        "             cska-sevilla                                            cska (3-2) sevilla  \n",
-       "             inter-chelsea                                          inter (3-1) chelsea  \n",
        "...                                                                                 ...  \n",
        "2015.0 semi  barcelona-bayern                                    barcelona (5-3) bayern  \n",
        "             juventus-madrid                                      juventus (3-2) madrid  \n",
@@ -1067,7 +1067,7 @@
        "       semi  madrid-atletico                                      madrid (4-2) atletico  \n",
        "             monaco-juventus                                      monaco (1-4) juventus  \n",
        "\n",
-       "[139 rows x 5 columns]"
+       "[140 rows x 5 columns]"
       ]
      },
      "execution_count": 9,
