some other work

--- a/get-results.ipynb
+++ b/get-results.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -14,9 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "goles = pd.read_csv('goles - liga de campeones - Sheet1.tsv', sep='\\t')"
@@ -25,14 +21,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -134,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "goles['season'].fillna(method='pad', inplace=True)\n",
@@ -148,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "goles['t1'] = goles.tie.apply(lambda x: x.split('-')[0])\n",
@@ -161,7 +164,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -169,6 +171,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -289,15 +304,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sum_goals(part):\n",
     "    '''\n",
-    "    gets the goals and away goals for a part of a game\n",
-    "    part: regular or extra time\n",
+    "    Gets the goals and away goals for a part of a game.\n",
+    "    A \"part\" is regular or extra time.\n",
     "    '''\n",
     "    t1g =\\\n",
     "    len(part[(part.game==1) & (part.away.isnull())]) +\\\n",
@@ -310,9 +323,16 @@
     "    t1ag = len(part[(part.game==2) & (part.away.notnull())])\n",
     "    t2ag = len(part[(part.game==1) & (part.away.notnull())])\n",
     "    \n",
-    "    return t1g, t2g, t1ag, t2ag\n",
-    "\n",
-    "def tie_result(goals):\n",
+    "    return t1g, t2g, t1ag, t2ag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tie_result(goals):\n",
     "    winner = None\n",
     "    pk = agr = aet = False\n",
     "    result = \"\"\n",
@@ -336,8 +356,13 @@
     "        goals.minute == 'pk'\n",
     "    ]\n",
     "    \n",
+    "    # goals and away goals in regulation\n",
     "    t1g, t2g, t1ag, t2ag = sum_goals(reg)\n",
+    "    \n",
+    "    # goals and away goals in extra time\n",
     "    t1etg, t2etg, t1aetg, t2aetg = sum_goals(et)\n",
+    "    \n",
+    "    # pk shootout result\n",
     "    t1pkwin = len(pkg[pkg.away == 'a'])\n",
     "    \n",
     "    # if goal sums differ\n",
@@ -360,7 +385,8 @@
     "    # this went to extra time\n",
     "    if (t1g == t2g) & (t1ag == t2ag):\n",
     "        aet = True\n",
-    "\n",
+    "    \n",
+    "    # a string summarizing the result\n",
     "    result = \"{} ({}-{}{}{}{}\".format(\n",
     "        t1,\n",
     "        t1g+t1etg,\n",
@@ -368,7 +394,8 @@
     "        \" aet) \" if aet else \") \",\n",
     "        t2,\n",
     "        \", {} won on penalties\".format(winner) if pk else (\n",
-    "        \", {} won on away goals rule\".format(winner) if agr else \"\")\n",
+    "            \", {} won on away goals\".format(winner) if agr else \"\"\n",
+    "        )\n",
     "    )\n",
     "    \n",
     "    return pd.Series(\n",
@@ -379,26 +406,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results = goles.groupby(['season','round','tie']).apply(tie_result)"
+    "results = goles.groupby(['season','round','tie']).apply(get_tie_result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -555,7 +591,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>atletico (2-2) porto, porto won on away goals ...</td>\n",
+       "      <td>atletico (2-2) porto, porto won on away goals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chelsea-juventus</th>\n",
@@ -663,7 +699,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>bayern (4-4) fiorentina, bayern won on away go...</td>\n",
+       "      <td>bayern (4-4) fiorentina, bayern won on away goals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cska-sevilla</th>\n",
@@ -807,7 +843,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>atletico (2-2) bayern, atletico won on away go...</td>\n",
+       "      <td>atletico (2-2) bayern, atletico won on away goals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>city-madrid</th>\n",
@@ -833,7 +869,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>city (6-6) monaco, monaco won on away goals rule</td>\n",
+       "      <td>city (6-6) monaco, monaco won on away goals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>leverkusen-atletico</th>\n",
@@ -1020,7 +1056,7 @@
        "       semi  barcelona-united                                    barcelona (0-1) united  \n",
        "             liverpool-chelsea                              liverpool (3-4 aet) chelsea  \n",
        "2009.0 first arsenal-roma              arsenal (1-1 aet) roma, arsenal won on penalties  \n",
-       "             atletico-porto           atletico (2-2) porto, porto won on away goals ...  \n",
+       "             atletico-porto               atletico (2-2) porto, porto won on away goals  \n",
        "             chelsea-juventus                                    chelsea (3-2) juventus  \n",
        "             inter-united                                            inter (0-2) united  \n",
        "             lyon-barcelona                                        lyon (3-6) barcelona  \n",
@@ -1033,7 +1069,7 @@
        "             villareal-arsenal                                  villareal (1-4) arsenal  \n",
        "       semi  barcelona-chelsea        barcelona (1-1) chelsea, barcelona won on away...  \n",
        "             united-arsenal                                        united (4-1) arsenal  \n",
-       "2010.0 first bayern-fiorentina        bayern (4-4) fiorentina, bayern won on away go...  \n",
+       "2010.0 first bayern-fiorentina        bayern (4-4) fiorentina, bayern won on away goals  \n",
        "             cska-sevilla                                            cska (3-2) sevilla  \n",
        "...                                                                                 ...  \n",
        "2015.0 semi  barcelona-bayern                                    barcelona (5-3) bayern  \n",
@@ -1050,10 +1086,10 @@
        "             munich-benfica                                        munich (3-2) benfica  \n",
        "             psg-city                                                    psg (2-3) city  \n",
        "             wolfsburg-madrid                                    wolfsburg (2-3) madrid  \n",
-       "       semi  atletico-bayern          atletico (2-2) bayern, atletico won on away go...  \n",
+       "       semi  atletico-bayern          atletico (2-2) bayern, atletico won on away goals  \n",
        "             city-madrid                                              city (0-1) madrid  \n",
        "2017.0 first benfica-dortmund                                    benfica (1-4) dortmund  \n",
-       "             city-monaco               city (6-6) monaco, monaco won on away goals rule  \n",
+       "             city-monaco                    city (6-6) monaco, monaco won on away goals  \n",
        "             leverkusen-atletico      leverkusen (3-3) atletico, atletico won on awa...  \n",
        "             madrid-napoli                                          madrid (6-2) napoli  \n",
        "             munich-arsenal                                       munich (10-2) arsenal  \n",
@@ -1070,7 +1106,7 @@
        "[140 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,10 +1117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "results.to_csv('results.csv')"
@@ -1093,9 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1116,9 +1148,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
