update and formatting

--- a/get-results.ipynb
+++ b/get-results.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goles = pd.read_csv('goles - liga de campeones - Sheet1.tsv', sep='\\t')"
+    "goles = pd.read_csv('goles - liga de campeones - Sheet1.tsv', sep='\\t', dtype=str)"
    ]
   },
   {
@@ -58,10 +58,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2017.0</td>\n",
+       "      <td>2017</td>\n",
        "      <td>first</td>\n",
        "      <td>city-monaco</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>26</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -121,12 +121,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   season  round          tie  game minute away extra shootout  note\n",
-       "0  2017.0  first  city-monaco   1.0     26  NaN   NaN      NaN   NaN\n",
-       "1     NaN    NaN          NaN   NaN     32    a   NaN      NaN   NaN\n",
-       "2     NaN    NaN          NaN   NaN     40    a   NaN      NaN   NaN\n",
-       "3     NaN    NaN          NaN   NaN     58  NaN   NaN      NaN   NaN\n",
-       "4     NaN    NaN          NaN   NaN     61    a   NaN      NaN   NaN"
+       "  season  round          tie game minute away extra shootout note\n",
+       "0   2017  first  city-monaco    1     26  NaN   NaN      NaN  NaN\n",
+       "1    NaN    NaN          NaN  NaN     32    a   NaN      NaN  NaN\n",
+       "2    NaN    NaN          NaN  NaN     40    a   NaN      NaN  NaN\n",
+       "3    NaN    NaN          NaN  NaN     58  NaN   NaN      NaN  NaN\n",
+       "4    NaN    NaN          NaN  NaN     61    a   NaN      NaN  NaN"
       ]
      },
      "execution_count": 3,
@@ -204,10 +204,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2017.0</td>\n",
+       "      <td>2017</td>\n",
        "      <td>first</td>\n",
        "      <td>city-monaco</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>26</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -218,10 +218,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2017.0</td>\n",
+       "      <td>2017</td>\n",
        "      <td>first</td>\n",
        "      <td>city-monaco</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>32</td>\n",
        "      <td>a</td>\n",
        "      <td>NaN</td>\n",
@@ -232,10 +232,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2017.0</td>\n",
+       "      <td>2017</td>\n",
        "      <td>first</td>\n",
        "      <td>city-monaco</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>40</td>\n",
        "      <td>a</td>\n",
        "      <td>NaN</td>\n",
@@ -246,10 +246,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2017.0</td>\n",
+       "      <td>2017</td>\n",
        "      <td>first</td>\n",
        "      <td>city-monaco</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>58</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -260,10 +260,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2017.0</td>\n",
+       "      <td>2017</td>\n",
        "      <td>first</td>\n",
        "      <td>city-monaco</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>61</td>\n",
        "      <td>a</td>\n",
        "      <td>NaN</td>\n",
@@ -277,12 +277,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   season  round          tie  game minute away extra shootout  note    t1  \\\n",
-       "0  2017.0  first  city-monaco   1.0     26  NaN   NaN      NaN   NaN  city   \n",
-       "1  2017.0  first  city-monaco   1.0     32    a   NaN      NaN   NaN  city   \n",
-       "2  2017.0  first  city-monaco   1.0     40    a   NaN      NaN   NaN  city   \n",
-       "3  2017.0  first  city-monaco   1.0     58  NaN   NaN      NaN   NaN  city   \n",
-       "4  2017.0  first  city-monaco   1.0     61    a   NaN      NaN   NaN  city   \n",
+       "  season  round          tie game minute away extra shootout note    t1  \\\n",
+       "0   2017  first  city-monaco    1     26  NaN   NaN      NaN  NaN  city   \n",
+       "1   2017  first  city-monaco    1     32    a   NaN      NaN  NaN  city   \n",
+       "2   2017  first  city-monaco    1     40    a   NaN      NaN  NaN  city   \n",
+       "3   2017  first  city-monaco    1     58  NaN   NaN      NaN  NaN  city   \n",
+       "4   2017  first  city-monaco    1     61    a   NaN      NaN  NaN  city   \n",
        "\n",
        "       t2  \n",
        "0  monaco  \n",
@@ -313,15 +313,15 @@
     "    A \"part\" is regular or extra time.\n",
     "    '''\n",
     "    t1g =\\\n",
-    "    len(part[(part.game==1) & (part.away.isnull())]) +\\\n",
-    "    len(part[(part.game==2) & (part.away.notnull())])\n",
+    "    len(part[(part.game=='1') & (part.away.isnull())]) +\\\n",
+    "    len(part[(part.game=='2') & (part.away.notnull())])\n",
     "    \n",
     "    t2g =\\\n",
-    "    len(part[(part.game==1) & (part.away.notnull())]) +\\\n",
-    "    len(part[(part.game==2) & (part.away.isnull())])\n",
+    "    len(part[(part.game=='1') & (part.away.notnull())]) +\\\n",
+    "    len(part[(part.game=='2') & (part.away.isnull())])\n",
     "    \n",
-    "    t1ag = len(part[(part.game==2) & (part.away.notnull())])\n",
-    "    t2ag = len(part[(part.game==1) & (part.away.notnull())])\n",
+    "    t1ag = len(part[(part.game=='2') & (part.away.notnull())])\n",
+    "    t2ag = len(part[(part.game=='1') & (part.away.notnull())])\n",
     "    \n",
     "    return t1g, t2g, t1ag, t2ag"
    ]
@@ -460,7 +460,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"14\" valign=\"top\">2008.0</th>\n",
+       "      <th rowspan=\"14\" valign=\"top\">2008</th>\n",
        "      <th rowspan=\"8\" valign=\"top\">first</th>\n",
        "      <th>arsenal-milan</th>\n",
        "      <td>arsenal</td>\n",
@@ -576,7 +576,7 @@
        "      <td>liverpool (3-4 aet) chelsea</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"14\" valign=\"top\">2009.0</th>\n",
+       "      <th rowspan=\"14\" valign=\"top\">2009</th>\n",
        "      <th rowspan=\"8\" valign=\"top\">first</th>\n",
        "      <th>arsenal-roma</th>\n",
        "      <td>arsenal</td>\n",
@@ -692,7 +692,7 @@
        "      <td>united (4-1) arsenal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">2010.0</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2010</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">first</th>\n",
        "      <th>bayern-fiorentina</th>\n",
        "      <td>bayern</td>\n",
@@ -720,7 +720,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">2015.0</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2015</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">semi</th>\n",
        "      <th>barcelona-bayern</th>\n",
        "      <td>barcelona</td>\n",
@@ -738,7 +738,7 @@
        "      <td>juventus (3-2) madrid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"14\" valign=\"top\">2016.0</th>\n",
+       "      <th rowspan=\"14\" valign=\"top\">2016</th>\n",
        "      <th rowspan=\"8\" valign=\"top\">first</th>\n",
        "      <th>arsenal-barcelona</th>\n",
        "      <td>barcelona</td>\n",
@@ -854,7 +854,7 @@
        "      <td>city (0-1) madrid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"14\" valign=\"top\">2017.0</th>\n",
+       "      <th rowspan=\"14\" valign=\"top\">2017</th>\n",
        "      <th rowspan=\"8\" valign=\"top\">first</th>\n",
        "      <th>benfica-dortmund</th>\n",
        "      <td>dortmund</td>\n",
@@ -977,7 +977,7 @@
       "text/plain": [
        "                                          winner     pk    agr    aet  \\\n",
        "season round tie                                                        \n",
-       "2008.0 first arsenal-milan               arsenal  False  False  False   \n",
+       "2008   first arsenal-milan               arsenal  False  False  False   \n",
        "             celtic-barcelona          barcelona  False  False  False   \n",
        "             fenerbahce-sevilla       fenerbahce   True  False   True   \n",
        "             liverpool-inter           liverpool  False  False  False   \n",
@@ -991,7 +991,7 @@
        "             schalke-barcelona         barcelona  False  False  False   \n",
        "       semi  barcelona-united             united  False  False  False   \n",
        "             liverpool-chelsea           chelsea  False  False   True   \n",
-       "2009.0 first arsenal-roma                arsenal   True  False   True   \n",
+       "2009   first arsenal-roma                arsenal   True  False   True   \n",
        "             atletico-porto                porto  False   True  False   \n",
        "             chelsea-juventus            chelsea  False  False  False   \n",
        "             inter-united                 united  False  False  False   \n",
@@ -1005,12 +1005,12 @@
        "             villareal-arsenal           arsenal  False  False  False   \n",
        "       semi  barcelona-chelsea         barcelona  False   True  False   \n",
        "             united-arsenal               united  False  False  False   \n",
-       "2010.0 first bayern-fiorentina            bayern  False   True  False   \n",
+       "2010   first bayern-fiorentina            bayern  False   True  False   \n",
        "             cska-sevilla                   cska  False  False  False   \n",
        "...                                          ...    ...    ...    ...   \n",
-       "2015.0 semi  barcelona-bayern          barcelona  False  False  False   \n",
+       "2015   semi  barcelona-bayern          barcelona  False  False  False   \n",
        "             juventus-madrid            juventus  False  False  False   \n",
-       "2016.0 first arsenal-barcelona         barcelona  False  False  False   \n",
+       "2016   first arsenal-barcelona         barcelona  False  False  False   \n",
        "             benfica-zenit               benfica  False  False  False   \n",
        "             gent-wolfsburg            wolfsburg  False  False  False   \n",
        "             juventus-munich              munich  False  False   True   \n",
@@ -1024,7 +1024,7 @@
        "             wolfsburg-madrid             madrid  False  False  False   \n",
        "       semi  atletico-bayern            atletico  False   True  False   \n",
        "             city-madrid                  madrid  False  False  False   \n",
-       "2017.0 first benfica-dortmund           dortmund  False  False  False   \n",
+       "2017   first benfica-dortmund           dortmund  False  False  False   \n",
        "             city-monaco                  monaco  False   True  False   \n",
        "             leverkusen-atletico        atletico  False   True  False   \n",
        "             madrid-napoli                madrid  False  False  False   \n",
@@ -1041,7 +1041,7 @@
        "\n",
        "                                                                                 result  \n",
        "season round tie                                                                         \n",
-       "2008.0 first arsenal-milan                                          arsenal (2-0) milan  \n",
+       "2008   first arsenal-milan                                          arsenal (2-0) milan  \n",
        "             celtic-barcelona                                    celtic (2-4) barcelona  \n",
        "             fenerbahce-sevilla       fenerbahce (5-5 aet) sevilla, fenerbahce won o...  \n",
        "             liverpool-inter                                      liverpool (3-0) inter  \n",
@@ -1055,7 +1055,7 @@
        "             schalke-barcelona                                  schalke (0-2) barcelona  \n",
        "       semi  barcelona-united                                    barcelona (0-1) united  \n",
        "             liverpool-chelsea                              liverpool (3-4 aet) chelsea  \n",
-       "2009.0 first arsenal-roma              arsenal (1-1 aet) roma, arsenal won on penalties  \n",
+       "2009   first arsenal-roma              arsenal (1-1 aet) roma, arsenal won on penalties  \n",
        "             atletico-porto               atletico (2-2) porto, porto won on away goals  \n",
        "             chelsea-juventus                                    chelsea (3-2) juventus  \n",
        "             inter-united                                            inter (0-2) united  \n",
@@ -1069,12 +1069,12 @@
        "             villareal-arsenal                                  villareal (1-4) arsenal  \n",
        "       semi  barcelona-chelsea        barcelona (1-1) chelsea, barcelona won on away...  \n",
        "             united-arsenal                                        united (4-1) arsenal  \n",
-       "2010.0 first bayern-fiorentina        bayern (4-4) fiorentina, bayern won on away goals  \n",
+       "2010   first bayern-fiorentina        bayern (4-4) fiorentina, bayern won on away goals  \n",
        "             cska-sevilla                                            cska (3-2) sevilla  \n",
        "...                                                                                 ...  \n",
-       "2015.0 semi  barcelona-bayern                                    barcelona (5-3) bayern  \n",
+       "2015   semi  barcelona-bayern                                    barcelona (5-3) bayern  \n",
        "             juventus-madrid                                      juventus (3-2) madrid  \n",
-       "2016.0 first arsenal-barcelona                                  arsenal (1-5) barcelona  \n",
+       "2016   first arsenal-barcelona                                  arsenal (1-5) barcelona  \n",
        "             benfica-zenit                                          benfica (3-1) zenit  \n",
        "             gent-wolfsburg                                        gent (2-4) wolfsburg  \n",
        "             juventus-munich                                  juventus (4-6 aet) munich  \n",
@@ -1088,7 +1088,7 @@
        "             wolfsburg-madrid                                    wolfsburg (2-3) madrid  \n",
        "       semi  atletico-bayern          atletico (2-2) bayern, atletico won on away goals  \n",
        "             city-madrid                                              city (0-1) madrid  \n",
-       "2017.0 first benfica-dortmund                                    benfica (1-4) dortmund  \n",
+       "2017   first benfica-dortmund                                    benfica (1-4) dortmund  \n",
        "             city-monaco                    city (6-6) monaco, monaco won on away goals  \n",
        "             leverkusen-atletico      leverkusen (3-3) atletico, atletico won on awa...  \n",
        "             madrid-napoli                                          madrid (6-2) napoli  \n",
@@ -1134,21 +1134,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
